Alignment fixes

--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ h6 {
   color: #00bfa2;
 }
 
-.contact-links, .skills-links.top {
+.contact-links {
   margin-top: 20px;
 }
 
@@ -133,6 +133,8 @@ footer .footer-line {
   section {
     padding-top: 40px;
     padding-bottom: 80px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   header {
@@ -187,8 +189,8 @@ footer .footer-line {
     width: 160px;
     text-shadow: 0 2px 2px rgba(0,0,0, 0.5);
   }
-
-  header hr {
+  
+  header .intro-text hr {
     border-top: 2px solid white;
     width: 20%;
     margin: 30px auto;
@@ -202,10 +204,14 @@ footer .footer-line {
     text-align: center;
   }
 
-  hr {
+  .content-container hr {
     border-top: 1px solid #000;
     width: 20%;
     margin: 45px auto;
+  }
+  
+  .skills-links.up {
+    margin-top: 45px;
   }
 
   .skills-links.bottom {
@@ -217,12 +223,10 @@ footer .footer-line {
   header .headshot img {
     width: 240px;
   }
-
   header .intro-text .intro-heading {
     font-size: 55px;
     line-height: 80px;
   }
-
   .center {
     text-align: center;
   }
@@ -231,6 +235,10 @@ footer .footer-line {
 @media (min-width: 768px) {
   section {
     padding: 80px 0;
+  }
+
+  .skills-links.up {
+    margin-top: 0px;
   }
 
   .skills-links.bottom {
@@ -268,6 +276,13 @@ footer .footer-line {
 
   .center {
     text-align: left;
+  }
+
+  .content-container hr {
+    border-top: 1px solid #fff;
+    width: 100%;
+    float: left;
+    margin: 20px auto;
   }
 
   .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
